--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>mini MEAN</title>
+    <link rel="stylesheet" type="text/css" href="css/app.css" />	
+<!--    <link rel="stylesheet" type="text/css" href="css/app.min.css" /> -->
 </head>
 <body ng-app="app">
 	<h1>Hello mini MEAN!</h1>
