Testing database connection and added Typekit-font.

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 <head>
 	<title>mini MEAN</title>
 	<meta charset="UTF-8">	
-    <link rel="stylesheet" type="text/css" href="css/app.css" />	
+	<link rel="stylesheet" type="text/css" href="css/app.css" />	
 <!--    <link rel="stylesheet" type="text/css" href="css/app.min.css" /> -->
+	<!-- Typekit -->
+	<script src="https://use.typekit.net/vrc8urf.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	<!-- Live reload --> 
 	<script>
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
@@ -13,7 +16,7 @@
 <body ng-app="app">
 	<div id="container">
 		<div ng-controller="myController">
-			<div><h1>Hello mini MEAN!</h1></div>
+			<div><h1 class="title">EDUNOW</h1></div>
 			<div>
 				<a href="#">Link 1 </a>
 				<a href="#">Link 2 </a>
