Modified database generation.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>mini MEAN</title>
+	<title>E D U N O W</title>
 	<meta charset="UTF-8">	
 	<link rel="stylesheet" type="text/css" href="css/app.css" />	
 <!--    <link rel="stylesheet" type="text/css" href="css/app.min.css" /> -->
