--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
 -->
 <!--			<div><button ng-click="hello()">HELLO!</button></div>-->
 			<div id="innerContainer">
+			<h1>My profile</h1>
+			<div ng-repeat="skills in mySkills track by $index" class="user">
+				<span class="name"><b>John Doe</b></span>
+				<span ng-repeat="skill in skills.skills track by $index"><span class="skill">{{ skill }}</span> </span>
+			</div>
 			<h1>Users</h1>
 			<div ng-repeat="user in skills track by $index" class="user">
 				<span class="name"><b>{{ user.firstname }} {{ user.lastname }}</b></span><span ng-repeat="skill in user.skills track by $index"><span class="skill">{{ skill }}</span> </span>
