--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,9 @@
 			<h1>My profile</h1>
 			<div ng-repeat="skills in mySkills track by $index" class="user">
 				<span class="name"><b>John Doe</b></span>
-				<span ng-repeat="skill in skills.skills track by $index"><span class="skill">{{ skill }} <span class="delete"> x </span></span> </span>
+
+				<span ng-repeat="skill in skills.skills track by $index"><span ng-class="{'deletehover' : hovering, 'skill' : true }">{{ skill }} <span class="delete" ng-mouseenter="hovering=true" ng-mouseleave="hovering=false"> x</span></span> </span>
+
 			</div>
 
 			<div>
