Added current user to database and matching function.

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 				<div class="name"><b>{{ user.firstname }} {{ user.lastname }}</b> <button class="addFriend">Add friend</button></div> 
 				<div>Location: {{ user.location }}</div>
-				<div>Total score: {{ user.total }}</div>
+<!--				<div>Total score: {{ user.total }}</div>-->
 
 				<div>
 				<span>Skills:</span> 
