--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
 			</div>
 
 			<div>
-				<input></input>
-				<button ng-click="addSkill('New skill')">Add skill</button>
+				<input type="text" ng-model="input.newSkill"></input>
+				<button ng-click="addSkill(input.newSkill)">Add skill</button>
 			</div>
 
 			<h1>Matches</h1>
