--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
 			<div ng-repeat="user in topSkills track by $index" class="user">
 
-				<div class="name"><b>{{ user.firstname }} {{ user.lastname }}</b> <button class="addFriend">Add friend</button></div> 
+				<div class="name"><b>{{ user.firstname }} {{ user.lastname }}</b> <button class="addFriend" ng-click="addFriend()">Add friend</button></div> 
 				<div>Location: {{ user.location }}</div>
 <!--				<div>Total score: {{ user.total }}</div>-->
 
